# ai-ticker

./: .bandit  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  __init__.py  __version__.py  app.py  config.py  dev.sh  docker-compose.dev.yml  docker-compose.yml  plugin_client.py  plugin_config.json  plugin_config.json.example  prompts.json  requirements.txt  run.sh  setup.cfg  start-production.sh
.config/: .editorconfig  .flake8  .gitignore  README.md  app_factory.py.example  pyproject.toml  release.sh  setup.sh
.github/: dependabot.yml  pull_request_template.md  workflow-config.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_request.md
.github/workflows/: auto-format.yml  check-requirements.yml  code-quality.yml  dependency-updates.yml  docker-build.yml  docs-update.yml  health-monitoring.yml  lint.yml  performance.yml  plugin-validation.yml  python-package.yml  release.yml  repo-health.yml  security.yml  test-coverage.yml  test.yml
docs/: CONTRIBUTING.md  PLUGIN_DEVELOPMENT.md  PROVIDERS.md  README.md  SECURITY.md
docs/api/: README.md
plugins/: __init__.py  base_provider.py  integration.py  plugin_manager.py  registry.py
plugins/builtin/: __init__.py  anthropic_provider.py  deepinfra_provider.py  gemini_provider.py  groq_provider.py  (+4 more)
scripts/: health-check.py  workflow-status.py
static/: style-expanded.css  style.css
templates/: index.html
tests/: README.md  __init__.py  test_app.py  test_builtin_providers.py  test_integration.py  test_plugin_system.py
(+1 files in other folders)
