# Project setup configuration
[metadata]
name = ai_ticker
version = 1.2.0
description = A modern Flask dashboard for dynamic AI-generated messages with comprehensive plugin system
author = L1nch-lab
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    Flask
    openai>=1.14.3
    httpx>=0.27.0
    pydantic>=1.10.13
    python-dotenv
    rapidfuzz
    Flask-Compress
    gunicorn

[flake8]
max-line-length = 120
exclude = .git,__pycache__,venv,.venv,build,dist
ignore = E203, E266, E501, W503
# E203: whitespace before ':'
# E266: too many leading '#' for block comment
# E501: line too long
# W503: line break before binary operator

[tool:pytest]
testpaths = tests
python_files = test_*.py
